[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/Misc/PositionSelector.png" type="Texture" id=1]
[ext_resource path="res://ScenarioScene/PositionSelector/PositionSelectItem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[node name="PositionSelectItem" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 50, 50 )

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
